<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="-30dp"
    android:padding="16dp"
    app:cardCornerRadius="15dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown_exception"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone"
            android:layout_gravity="center"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fmn_try_again_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_again"
            android:textColor="@color/dark_tint_color"
            android:layout_gravity="center"
            android:visibility="gone" />

        <TextView
            android:id="@+id/search_title"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingTop="20dp"
            android:text="@string/search_title"
            android:textAlignment="center"
            android:textColor="@color/dark_tint_color"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title_for_input"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/rounded_corners"
                android:inputType="text"
                android:textColor="@color/dark_tint_color"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/quantity"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/quantity">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/quantity_for_input"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/rounded_corners"
                android:inputType="numberDecimal"
                android:textColor="@color/dark_tint_color"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/apply_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/dark_tint_color"
            android:text="@string/apply"
            android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
            android:textColor="@color/white"
            app:cornerRadius="15dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.card.MaterialCardView>