<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/back_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_baseline_keyboard_backspace_24"
                app:iconSize="28dp"
                app:iconTint="@color/dark_tint_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_tint_color"
                android:text="@string/movie_info"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/back_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/back_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:backgroundTint="@color/white"
        android:elevation="15dp"
        app:cardCornerRadius="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/poster"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/search_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_baseline_search_24" />

            <TextView
                android:id="@+id/title"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:textColor="@color/dark_tint_color"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/poster"
                app:layout_constraintTop_toTopOf="@id/poster"
                tools:text="Sherlock" />

            <TextView
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/dark_grey"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/poster"
                app:layout_constraintTop_toBottomOf="@id/title"
                tools:ignore="TextContrastCheck"
                tools:text="2010" />

            <TextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:textColor="@color/dark_grey"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/poster"
                app:layout_constraintTop_toBottomOf="@id/year"
                tools:ignore="TextContrastCheck"
                tools:text="movie" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/grey_color"
                android:text="@string/link"
                android:textColor="@color/dark_tint_color"
                app:cornerRadius="10dp"
                app:layout_constraintTop_toBottomOf="@id/year"
                app:layout_constraintBottom_toTopOf="@id/comment"
                app:layout_constraintStart_toEndOf="@id/poster"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/grey_color"
                android:text="@string/imdb"
                android:textColor="@color/dark_tint_color"
                app:cornerRadius="10dp"
                app:icon="@drawable/ic_baseline_mode_comment_24"
                app:iconTint="@color/light_tint_color"
                app:layout_constraintBottom_toBottomOf="@id/poster"
                app:layout_constraintStart_toEndOf="@id/poster"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/like"
                android:layout_width="55dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:backgroundTint="@color/grey_color"
                app:cornerRadius="10dp"
                app:icon="@drawable/ic_baseline_favorite_24"
                app:iconTint="@color/light_tint_color"
                app:layout_constraintBottom_toBottomOf="@id/poster"
                app:layout_constraintStart_toEndOf="@id/comment"
                tools:ignore="SpeakableTextPresentCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/liked"
                android:layout_width="55dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:backgroundTint="@color/grey_color"
                android:visibility="gone"
                app:cornerRadius="10dp"
                app:icon="@drawable/ic_baseline_favorite_24"
                app:iconTint="@color/red"
                app:layout_constraintBottom_toBottomOf="@id/poster"
                app:layout_constraintStart_toEndOf="@id/comment"
                tools:ignore="SpeakableTextPresentCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/comments_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/comments"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:backgroundTint="@color/white"
        android:elevation="15dp"
        app:cardCornerRadius="15dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/comment_text"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/comment_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/comment_for_input"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/rounded_corners"
                android:inputType="text"
                android:textColor="@color/dark_tint_color"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/leave_comment_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="130dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/dark_tint_color"
            android:text="@string/leave_comment"
            android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
            android:textColor="@color/white"
            app:cornerRadius="15dp" />

    </androidx.cardview.widget.CardView>

</androidx.appcompat.widget.LinearLayoutCompat>